commit per riduzione smells e ottimizzazione codice